# motorZaberMotion

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  SETUP.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  tasks.py
.ci-local/travis/: post-prepare.py
.gitlab/merge_request_templates/: default.md
configure/: CONFIG_SITE  EXAMPLE_CONFIG_SITE.local  EXAMPLE_RELEASE.local  RELEASE
docs/: RELEASE.md
images/: README.md  epics_ubuntu.Dockerfile  linux_arm64.Dockerfile
iocs/: Makefile
iocs/zaberMotionIOC/configure/: CONFIG_SITE  RELEASE
iocs/zaberMotionIOC/iocBoot/iocZaberMotion/: .iocsh_history  common.iocsh  dbPath.cmd.zaber  motor.cmd.db-path.zaber  motor.cmd.linear-stage.zaber  motor.cmd.profile.zaber  motor.cmd.rotary-stage.zaber  motor.cmd.xy-stage.zaber  motor.cmd.zaber  motor.substitutions.linear-stage.zaber  motor.substitutions.rotary-stage.zaber  motor.substitutions.xy-stage.zaber  motor.substitutions.zaber  profile.cmd.zaber  st.cmd  st.cmd.darwin-aarch64  st.cmd.darwin-x86  st.cmd.linear-stage  st.cmd.linux-aarch64  st.cmd.linux-arm  st.cmd.linux-x86_64  st.cmd.rotary-stage  st.cmd.xy-stage  start.sh  test_profile.sh  test_profile_move_xy.sh  test_profile_pulses.sh
iocs/zaberMotionIOC/zaberMotionApp/Db/: Makefile  zaberExampleRecord.db
iocs/zaberMotionIOC/zaberMotionApp/src/: Makefile
tests/: __init__.py
tests/e2e/: __init__.py  ca_helpers.py  conftest.py  ioc_helpers.py  mock_helpers.py  profile_helpers.py  pvt_handler.py  test_basic_motion.py  test_linear_units.py  test_profile_build.py  test_profile_run.py  test_rotary_units.py
tests/e2e/substitutions/: motor.substitutions.linear-test.zaber  motor.substitutions.rotary-test.zaber
tests/typings/aioca/: __init__.pyi
zaberMotionApp/: zaberAxis.cpp  zaberBaseController.cpp  zaberBaseController.h
zaberMotionApp/Db/: Makefile  profileMoveControllerZaber.template  zaberAxis.db
zaberMotionApp/src/: Makefile  zaberAxis.cpp  zaberAxis.h  zaberBaseController.cpp  zaberBaseController.h  zaberConnectionManager.cpp  zaberConnectionManager.h  zaberController.cpp  zaberController.h  zaberMotionRegister.cpp  zaberMotionSupport.dbd  zaberUtils.cpp  zaberUtils.h
zaberMotionApp/test/: CMakeLists.txt  test_main.cpp
zaberMotionApp/test/tests/: zaberConnectionManagerTest.cpp
zaberMotionApp/test/zml_mock/zaber/motion/ascii/: connection.cpp  connection.h
zaberMotionSupport/: .gitignore  Makefile
zaberMotionSupport/ZaberMotionCppSupport/include/zaber/motion/: ascii.h  binary.h  gcode.h  includes.h  library.h  library_exception.h  microscopy.h  product.h  tools.h  unit_table.h  units.h  version.h
zaberMotionSupport/ZaberMotionCppSupport/include/zaber/motion/ascii/: all_axes.h  axis.h  axis_group.h  axis_settings.h  connection.h  device.h  device_io.h  device_settings.h  lockstep.h  oscilloscope.h  oscilloscope_data.h  pvt.h  pvt_buffer.h  pvt_io.h  pvt_sequence.h  servo_tuner.h  setting_constants.h  storage.h  stream.h  stream_buffer.h  stream_io.h  streams.h  (+5 more)
zaberMotionSupport/ZaberMotionCppSupport/lib/darwin_arm64/: libzaber-motion.7.8.dylib  libzaber-motion.dylib
zaberMotionSupport/ZaberMotionCppSupport/lib/darwin_x64/: libzaber-motion.7.2.dylib  libzaber-motion.dylib
zaberMotionSupport/ZaberMotionCppSupport/lib/linux_arm64/: libzaber-motion.so.7.2  libzaber-motion.so.7.8
zaberMotionSupport/ZaberMotionCppSupport/lib/linux_x64/: libzaber-motion.so.7.2
zaberMotionSupport/configure/: RELEASE
(+439 files in other folders)
