[project]
name = "motorzabermotion"
version = "0.1.0"
description = "End-to-end tests for the motorZaberMotion EPICS driver."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zaber-ascii-mock",
]

[tool.uv.sources]
zaber-ascii-mock = { path = "../../../../../zaber/zaber-ascii-mock", editable = true }

[dependency-groups]
dev = [
    "aioca",
    "pytest",
    "pytest-asyncio",
    "pyright",
    "ruff~=0.14.0",
]

[tool.ruff]
extend = "zaber-python-tooling-config/zaber-ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is how pytest works
    "D101",    # test class names are self-documenting
    "D102",    # test method names are self-documenting
    "D103",    # fixture names are self-documenting
    "PLR2004", # magic values in assertions are expected values
]

[tool.pyright]
extends = "zaber-python-tooling-config/zaber-pyright.toml"
extraPaths = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
